<resources>
    <string name="app_name">Grocery List</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="cancel_button">Cancel</string>
    <string name="dialog_item">Enter item</string>
    <string name="done_button">Done</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">This name is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="facebook_app_id">1290333240981429</string>
    <string name="logout">Logout</string>
    <string name="ok_button">OK</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="picasso_url">http://46.101.241.44:8080/user/avatar/</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="select_picture">Select new from gallery</string>
    <string name="take_picture">Take new picture</string>
    <string name="test_email">kotte@gmail.com</string>
    <string name="test_name">Kotte</string>
    <string name="title_activity_login">Sign in</string>
    <string name="url">http://46.101.241.44:8080/</string>
</resources>
